DockerFile makemigrations + migrate

--- a/docker/django-compose/app/Dockerfile
+++ b/docker/django-compose/app/Dockerfile
@@ -22,3 +22,6 @@ EOF
 # install Docker tools (cli, buildx, compose)
 COPY --from=gloursdocker/docker / /
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["manage.py", "makemigrations"]
+CMD ["manage.py", "migrate"]
+
