DockerFile makemigrations + migrate

--- a/docker/django-compose/app/Dockerfile
+++ b/docker/django-compose/app/Dockerfile
@@ -7,6 +7,9 @@ COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app 
 ENTRYPOINT ["python3"]
+CMD ["manage.py", "makemigrations"]
+CMD ["manage.py", "migrate"]
+CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM builder as dev-envs
 RUN <<EOF
@@ -21,7 +24,6 @@ EOF
 # install Docker tools (cli, buildx, compose)
 COPY --from=gloursdocker/docker / /
 
-CMD ["manage.py", "makemigrations"]
-CMD ["manage.py", "migrate"]
+
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
