--- a/docker/django-compose/app/Dockerfile
+++ b/docker/django-compose/app/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app 
 ENTRYPOINT ["python3"]
-CMD ["manage.py", "makemigrations"]
+CMD ["manage.py", "makemigrations", "apirest"]
 CMD ["manage.py", "migrate"]
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
