DockerFile makemigrations + migrate

--- a/docker/django-compose/app/Dockerfile
+++ b/docker/django-compose/app/Dockerfile
@@ -1,14 +1,13 @@
 # syntax=docker/dockerfile:1.4
 
 FROM --platform=$BUILDPLATFORM python:3.10-alpine AS builder
-EXPOSE 8000
 WORKDIR /app 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app 
 ENTRYPOINT ["python3"]
-CMD ["manage.py", "makemigrations", "apirest"]
-CMD ["manage.py", "migrate"]
+RUN manage.py makemigrations apirest
+RUN manage.py migrate
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM builder as dev-envs
@@ -21,7 +20,5 @@ RUN <<EOF
 addgroup -S docker
 adduser -S --shell /bin/bash --ingroup docker vscode
 EOF
-# install Docker tools (cli, buildx, compose)
-COPY --from=gloursdocker/docker / /
 
 
