DockerFile makemigrations + migrate

--- a/docker/django-compose/app/Dockerfile
+++ b/docker/django-compose/app/Dockerfile
@@ -4,10 +4,10 @@ FROM --platform=$BUILDPLATFORM python:3.10-alpine AS builder
 WORKDIR /app 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
-COPY . /app 
+COPY . /app
+RUN python3 manage.py makemigrations apirest
+RUN python3 manage.py migrate
 ENTRYPOINT ["python3"]
-RUN manage.py makemigrations apirest
-RUN manage.py migrate
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM builder as dev-envs
