Curl-Tester + Compose Ports

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,7 +1,8 @@
 services:
   web: 
     build:
-      context: django-compose/app
+      context: app
+      dockerfile: django-compose/app/Dockerfile
       target: builder
     ports: 
       - '8000:8000'
