--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -11,6 +11,21 @@ services:
     networks:
       - bridge_network
 
+  db:
+    image: mariadb
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    networks:
+      - bridge_networks
+
+
 
 networks:
   bridge_network:
