--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -27,7 +27,7 @@ services:
     ports:
       - "3306:3306"
     networks:
-      - bridge_networks
+      - bridge_network
 
   nats:
     image: nats
@@ -35,7 +35,7 @@ services:
       - "8222:8222"
       - "4222:4222"
     networks:
-      - bridge_networks
+      - bridge_network
 
   micro1:
     build:
