--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -23,7 +23,7 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
-      - data:/var/lib/mysql
+      - /home/volume:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
@@ -83,3 +83,6 @@ services:
 networks:
   bridge_network:
     driver: bridge
+
+volumes:
+
