fix context web-rest

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -5,7 +5,7 @@ services:
 
   web-rest:
     build:
-      context: app
+      context: django-compose/app
       dockerfile: django-compose/app/Dockerfile
       target: builder
     ports: 
