--- a/docker/microservices-compose/Dockerfile
+++ b/docker/microservices-compose/Dockerfile
@@ -2,6 +2,8 @@
 
 FROM --platform=$BUILDPLATFORM python:3.10-alpine AS micropy
 WORKDIR /app
-COPY . /app
+COPY requirements.txt /app
+RUN ls -l
 RUN pip3 install -r requirements.txt --no-cache-dir
+COPY . /app
 
