--- a/docker/microservices-compose/Dockerfile
+++ b/docker/microservices-compose/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM --platform=$BUILDPLATFORM python:3.10-alpine AS micropy
 WORKDIR /app
-COPY requirements.txt /app
+COPY microservices-compose/requirements.txt /app
 RUN ls -l
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app
