--- a/docker/djangopache-compose/django-app.conf
+++ b/docker/djangopache-compose/django-app.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>        
-	ServerName lizziewizzie.site
-        ServerAlias www.lizziewizzie.site
-        DocumentRoot /home/lizzie/Films
+	ServerName placeholder.site
+        ServerAlias www.placeholder.site
+        DocumentRoot /var/www/html/django-app
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
 
