--- a/docker/djangopache-compose/Dockerfile
+++ b/docker/djangopache-compose/Dockerfile
@@ -12,8 +12,8 @@ RUN python3 -m venv /var/www/html/django-app/djangovenv && \
 
 RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py makemigrations && \
     /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py migrate
-#RUN cd djangoapplicationplacholder
-#RUN python3 manage.py collectstatic
+
+RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py collectstatic
 
 RUN sudo chgrp -R www-data /var/www/html
 RUN sudo a2ensite django-app
