--- a/docker/django-compose-user/app/Dockerfile
+++ b/docker/django-compose-user/app/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app
-RUN python3 manage.py makemigrations apirest
+RUN python3 manage.py makemigrations
 RUN python3 manage.py migrate
 ENTRYPOINT ["python3"]
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
