--- a/docker/microservices-compose/requirements.txt
+++ b/docker/microservices-compose/requirements.txt
@@ -1,1 +1,11 @@
-nats-py
+asgiref==3.8.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+idna==3.7
+nats-py==2.7.2
+python-dateutil==2.9.0.post0
+requests==2.32.3
+six==1.16.0
+sqlparse==0.5.0
+typing_extensions==4.12.2
+urllib3==2.2.1
