--- a/docker/djangopache-compose/Dockerfile
+++ b/docker/djangopache-compose/Dockerfile
@@ -3,8 +3,8 @@ RUN apt upgrade
 RUN apt update
 RUN apt install -y apache2 apache2-utils python3 python3-pip libapache2-mod-wsgi-py3 python3-venv
 
-COPY django-app.conf /etc/apache2/sites-available/
-COPY . /var/www/html/django-app
+COPY djangopache-compose/django-app.conf /etc/apache2/sites-available/
+COPY djangopache-compose/ /var/www/html/django-app
 
 # Set up virtual environment and install Python dependencies
 RUN python3 -m venv /var/www/html/django-app/djangovenv && \
