--- a/docker/djangopache-compose/Dockerfile
+++ b/docker/djangopache-compose/Dockerfile
@@ -15,6 +15,8 @@ RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/mana
 
 RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py collectstatic --noinput --clear
 
+RUN chmod -R 777 /var/www/html/django-app
+
 RUN chgrp -R www-data /var/www/html
 RUN a2ensite django-app
 RUN a2dissite 000-default.conf
