--- a/docker/djangopache-compose/Dockerfile
+++ b/docker/djangopache-compose/Dockerfile
@@ -1,23 +1,20 @@
-FROM ubuntu:latest
-RUN apt upgrade
-RUN apt update
-RUN apt install -y apache2 apache2-utils python3 python3-pip libapache2-mod-wsgi-py3 python3-venv
+FROM debian:bookworm-slim
 
-COPY djangopache-compose/django-app.conf /etc/apache2/sites-available/
 COPY djangopache-compose/ /var/www/html/django-app
 
-# Set up virtual environment and install Python dependencies
-RUN python3 -m venv /var/www/html/django-app/djangovenv && \
-    /var/www/html/django-app/djangovenv/bin/pip install -r /var/www/html/django-app/requirements.txt
+RUN apt update \
+        && apt install --no-install-recommends --no-install-suggests -y apache2 apache2-utils python3 p>
+        && python3 -m venv /var/www/html/django-app/djangovenv \
+        && /var/www/html/django-app/djangovenv/bin/pip install --no-cache-dir -r /var/www/html/django-a>
+        && /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py makemigrat>
+        && /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py migrate \
+        && /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py collectsta>
+        && rm -rf /var/www/html/django-app/makarov_gp/static \
+        && chmod -R 777 /var/www/html/django-app \
+        && chgrp -R www-data /var/www/html
 
-RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py makemigrations && \
-    /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py migrate
+COPY djangopache-compose/django-app.conf /etc/apache2/sites-available/
 
-RUN /var/www/html/django-app/djangovenv/bin/python /var/www/html/django-app/manage.py collectstatic --noinput --clear
 
-RUN chmod -R 777 /var/www/html/django-app
-
-RUN chgrp -R www-data /var/www/html
 RUN a2ensite django-app
 RUN a2dissite 000-default.conf
-
